# src/controllers/water.js
@@ -1,31 +1,46 @@
 import createHttpError from 'http-errors';
-import { createCard, patchCard, deleteCard, getMonthWater } from '../services/water.js';
-import {DATE_REGEX, MONTH_REGEX, PARSE_DATE_PARAMS} from '../constants/index.js';
+import {
+  createCard,
+  patchCard,
+  deleteCard,
+  getMonthWater,
+} from '../services/water.js';
+import {
+  DATE_REGEX,
+  MONTH_REGEX,
+  PARSE_DATE_PARAMS,
+} from '../constants/index.js';
 import getCurrentDate from '../utils/parseDate.js';
-
+import { actualAmountDayWater } from '../utils/actualAmountDayWater.js';
 
 export const getMonthWaterController = async (req, res) => {
-  const parsedDate = getCurrentDate(req.query, PARSE_DATE_PARAMS[0], MONTH_REGEX);
+  const parsedDate = getCurrentDate(
+    req.query,
+    PARSE_DATE_PARAMS[0],
+    MONTH_REGEX,
+  );
   const { _id: userId } = req.user;
   const data = await getMonthWater(userId, parsedDate);
 
   res.status(200).json({
     status: 200,
     message: `Successfully found drinks for ${parsedDate}!`,
-    data
-
+    data,
   });
 };
 export const getDayhWaterController = async (req, res) => {
-  const parsedDate = getCurrentDate(req.query, PARSE_DATE_PARAMS[1], DATE_REGEX);
+  const parsedDate = getCurrentDate(
+    req.query,
+    PARSE_DATE_PARAMS[1],
+    DATE_REGEX,
+  );
   const { _id: userId } = req.user;
   const data = await getMonthWater(userId, parsedDate);
 
   res.status(200).json({
     status: 200,
     message: `Successfully found drinks for ${parsedDate}!`,
-    data
-
+    data,
   });
 };
 
@@ -36,11 +51,12 @@ export const createCardController = async (req, res) => {
   };
 
   const data = await createCard(cardData, req);
-
+  const actualDayWater = await actualAmountDayWater(req.user._id);
   res.status(201).json({
     status: 201,
     message: `Successfully created a card!`,
     data,
+    actualDayWater,
   });
 };
 
@@ -58,11 +74,13 @@ export const patchCardController = async (req, res) => {
       },
     });
   }
+  const actualDayWater = await actualAmountDayWater(req.user._id);
 
   res.status(200).json({
     status: 200,
     message: 'Successfully patched a card!',
     data: patchedCard.card,
+    actualDayWater,
   });
 };
 
@@ -79,6 +97,11 @@ export const deleteCardController = async (req, res) => {
       },
     });
   }
+  const actualDayWater = await actualAmountDayWater(req.user._id);
 
-  res.status(204).send();
+  res.status(204).json({
+    status: 204,
+    message: 'Successfully deleted a card!',
+    actualDayWater,
+  });
 };
